# GIAIC-Q4-Hackathons

./: DEPLOYMENT_GUIDE.md  GEMINI_MIGRATION_SUMMARY.md  QUICK_DEPLOY_CHECKLIST.md
Hackathon 1/Step-1-physical-ai-humanoid-textbook/: README.md  docusaurus.config.js  render.yaml  validate_structure_simple.py
Hackathon 1/Step-1-physical-ai-humanoid-textbook/Backend/: .env  .env.example  .pre-commit-config.yaml  README.md  agent.py  dockerfile  main.py  pyproject.toml  requirements.txt
Hackathon 1/Step-1-physical-ai-humanoid-textbook/Backend/src/: main.py
Hackathon 1/Step-1-physical-ai-humanoid-textbook/Backend/src/api/: main.py
Hackathon 1/Step-1-physical-ai-humanoid-textbook/Backend/src/api/routes/: rag.py
Hackathon 1/Step-1-physical-ai-humanoid-textbook/Backend/src/chat/: endpoints.py
Hackathon 1/Step-1-physical-ai-humanoid-textbook/Backend/src/core/: config.py  constants.py
Hackathon 1/Step-1-physical-ai-humanoid-textbook/Backend/src/rag/: services.py
Hackathon 1/Step-1-physical-ai-humanoid-textbook/Backend/src/services/: __init__.py
Hackathon 1/Step-1-physical-ai-humanoid-textbook/Backend/tests/integration/: test_end_to_end.py
Hackathon 1/Step-2-Embedding/: agent.py  main.py  pyproject.toml  retrieving.py
Hackathon-1/: CHATBOT_FIX_SUMMARY.md  FINAL_FIX_SUMMARY.md
Hackathon-1/Step-1-physical-ai-humanoid-textbook/: .dockerignore  README.md  validate_implementation.py  validate_structure.py
Step-1-physical-ai-humanoid-textbook/: .gitignore  CHATBOT_INTEGRATION_COMPLETE.md  Dockerfile
Step-1-physical-ai-humanoid-textbook/docusaurus/: .env.example  (+1 more)
(+180 files in other folders)
