[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.12.0",
    "cohere>=5.20.0",
    "python-dotenv",
    "qdrant-client>=1.16.1",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langgraph",
    "openai-agents>=0.6.3",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
]
